--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Icon -->
-  <link rel="icon" href="../img/icon-page.svg">
+  <link rel="icon" href="/img/iconPage.svg">
   <!-- Css -->
   <link rel="stylesheet" href="index.css">
   <title>Puzzle</title>
@@ -34,7 +34,7 @@
       <aside class="piece-area">
         <!-- As peças vão aqui -->
         
-        <img src="../img/puzzle image.avif" alt="puzz-image" class="resolution" draggable="false">
+        <img src="/img/puzzleImg.avif" alt="puzz-image" class="resolution" draggable="false">
       </aside>
   </main>
   <footer class="footer">
