Html image src fixed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <aside class="piece-area">
         <!-- As peças vão aqui -->
         
-        <img src="/img/puzzleImg.avif" alt="puzz-image" class="resolution" draggable="false">
+        <img src="./img/puzzleImg.avif" alt="puzz-image" class="resolution" draggable="false">
       </aside>
   </main>
   <footer class="footer">
